fix: dark mode for message inputs

--- a/css/messages_page.css
+++ b/css/messages_page.css
@@ -92,9 +92,11 @@
 #writemessage input {
 	padding: 0.7em;
 	background-color: var(--background-primary);
+    border: 1px solid var(--halftone);
 	border-radius: 22px;
 	margin-bottom: 1em;
     border-style: solid;
+    color: var(--text);
 }
 
 #writemessage #newmessage {
